# calendar

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  calendar.cpp  calendar.sln  calendarVersion.h.in  makefile  sketches.md
src/: CMakeLists.txt  calendar.cpp
